@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -14,7 +16,8 @@
     <packaging>pom</packaging>
 
     <properties>
-        <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
+        <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec
+        </sonar.jacoco.itReportPath>
         <sonar.report.export.path>sonar-report.json</sonar.report.export.path>
         <sonar.scm.provider>git</sonar.scm.provider>
         <assignment.version>2.0.99</assignment.version>
@@ -22,12 +25,12 @@
         <notification.notify.version>0.0.26</notification.notify.version>
         <referencedata.version>2.0.191</referencedata.version>
         <referencedata.offences.version>1.0.19</referencedata.offences.version>
-        <resulting.version>2.0.216</resulting.version>
+        <resulting.version>2.0.224</resulting.version>
         <scheduling.version>2.0.88</scheduling.version>
         <authorisation.service.version>0.1.49</authorisation.service.version>
         <usersgroups.version>2.0.106</usersgroups.version>
         <progression.version>2.0.113</progression.version>
-        <prosecutioncasefile.version>1.0.23</prosecutioncasefile.version>
+        <prosecutioncasefile.version>1.0.28</prosecutioncasefile.version>
         <access-control-sjp-providers.version>4.1.4-ATCM</access-control-sjp-providers.version>
         <cpp.framework.action.mapping.enabled>true</cpp.framework.action.mapping.enabled>
         <mvn.site.url>file://${project.build.directory}/site</mvn.site.url>
@@ -39,6 +42,9 @@
         <activiti.library.version>1.3.0</activiti.library.version>
         <coredomain.version>0.1.0</coredomain.version>
         <pojo-generation.version>1.6.0-M1</pojo-generation.version>
+        <document-generator-client.version>1.0.4</document-generator-client.version>
+        <apache.pdfbox.version>2.0.11</apache.pdfbox.version>
+        <jvm.options>-Djava.locale.providers=CLDR</jvm.options>
     </properties>
 
     <modules>
@@ -59,6 +65,13 @@
                 <configuration>
                     <archiveClasses>true</archiveClasses>
                     <attachClasses>true</attachClasses>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>${jvm.options}</argLine>
                 </configuration>
             </plugin>
         </plugins>
